--- a/.github/workflows/build-qconf.yml
+++ b/.github/workflows/build-qconf.yml
@@ -9,22 +9,28 @@ on:
 
 jobs:
   build-ubuntu:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
+    container: ubuntu:20.04
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Install dependencies
+    - name: Install dependencies in Ubuntu 20.04
       run: |
-        sudo apt update
-        sudo apt -y install \
+        export DEBIAN_FRONTEND=noninteractive
+        apt update
+        apt -y install \
           build-essential cmake freeglut3-dev gdb git iputils-ping libgl1-mesa-dev \
           libglu1-mesa-dev libjpeg-dev libmysqlclient-dev libnss3-dev libopus-dev \
           libpng-dev libsqlite3-dev libssl-dev libx11-xcb-dev libxcb-xinerama0-dev \
           libxcb-xkb-dev libxcb1-dev libxcursor-dev libxi-dev libxml2-dev libxrender-dev \
           libxslt-dev lzip mesa-common-dev nano perl python3 valgrind wget zlib1g-dev \
-          '^libxcb.*-dev' libxkbcommon-dev libxkbcommon-x11-dev libgl-dev libdbus-1-dev libglib2.0-dev zip
+          libxcb-xfixes0-dev libxcb-render-util0-dev libxcb-xkb-dev libxcb-icccm4-dev \
+          libxcb-image0-dev libxcb-keysyms1-dev libxcb-randr0-dev libxcb-shape0-dev \
+          libxcb-sync-dev libxcb-xfixes0-dev libxcb-xinerama0-dev libxcb-dri3-dev \
+          libxkbcommon-dev libxkbcommon-x11-dev libgl-dev libdbus-1-dev libglib2.0-dev \
+          zip file desktop-file-utils
           
     - name: Download and extract Qt static libraries
       run: |
@@ -69,27 +75,102 @@ jobs:
         echo "Binary dependencies:"
         ldd qconf-static-bundled || echo "Static binary - no dynamic dependencies"
         
-    - name: Package Ubuntu build
+    - name: Download AppImage tools
+      run: |
+        # Download linuxdeploy
+        wget https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
+        chmod +x linuxdeploy-x86_64.AppImage
+        
+        # Download appimagetool
+        wget https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage
+        chmod +x appimagetool-x86_64.AppImage
+        
+        # Download runtime
+        wget https://github.com/AppImage/AppImageKit/releases/download/continuous/runtime-x86_64
+        
+        # Download DejaVu fonts
+        wget https://github.com/dejavu-fonts/dejavu-fonts/releases/download/version_2_37/dejavu-fonts-ttf-2.37.tar.bz2
+        tar -xjf dejavu-fonts-ttf-2.37.tar.bz2
+        
+    - name: Create desktop file and icon
+      run: |
+        # Create desktop file
+        cat > TelinkQConf.desktop << 'EOF'
+        [Desktop Entry]
+        Type=Application
+        Name=Telink QConf
+        Comment=Qt-based configuration tool
+        Exec=qconf-static-bundled
+        Icon=telink2
+        Categories=Development;
+        EOF
+        
+        # Create a simple icon (placeholder - you should provide your own telink2.png)
+        # For now, create a simple PNG using ImageMagick if available, or skip
+        if command -v convert >/dev/null 2>&1; then
+          convert -size 64x64 xc:blue telink2.png
+        else
+          # Create a minimal PNG file as placeholder
+          echo "iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mNkYPhfDwAChwGA60e6kgAAAABJRU5ErkJggg==" | base64 -d > telink2.png
+        fi
+        
+    - name: Create AppImage
+      run: |
+        # Clean up any existing AppDir
+        rm -rf AppDir/
+        mkdir AppDir
+        
+        # Copy binary
+        cp qconf-static-bundled AppDir/
+        
+        # Create fonts directory and copy fonts
+        mkdir -p AppDir/lib/fonts
+        cp dejavu-fonts-ttf-2.37/ttf/DejaVu*.ttf AppDir/lib/fonts/
+        
+        # Create qt.conf
+        cat > qt.conf << 'EOF'
+        [Paths]
+        Plugins = lib/qt5/plugins
+        Libraries = lib
+        EOF
+        
+        # Use linuxdeploy to create AppDir structure
+        ./linuxdeploy-x86_64.AppImage -e qconf-static-bundled --appdir=AppDir -i ./telink2.png -d TelinkQConf.desktop
+        
+        # Copy qt.conf to both locations
+        cp qt.conf AppDir/
+        cp qt.conf AppDir/usr/bin/
+        
+        # Create AppImage
+        ARCH=x86_64 ./appimagetool-x86_64.AppImage AppDir/ --runtime-file=./runtime-x86_64
+        
+        # List created files
+        ls -la *.AppImage
+        
+    - name: Package Ubuntu AppImage
       run: |
         mkdir -p dist/ubuntu-x64
-        cp qconf-static-bundled dist/ubuntu-x64/qconf
-        chmod +x dist/ubuntu-x64/qconf
+        cp *.AppImage dist/ubuntu-x64/qconf-x86_64.AppImage
+        chmod +x dist/ubuntu-x64/qconf-x86_64.AppImage
         
         # Create info file
-        echo "qconf - Linux x64 Static Build" > dist/ubuntu-x64/README.txt
+        echo "qconf - Linux x64 AppImage" > dist/ubuntu-x64/README.txt
         echo "Built on: $(date)" >> dist/ubuntu-x64/README.txt
         echo "Qt Version: 5.15.9 (static)" >> dist/ubuntu-x64/README.txt
         echo "Architecture: x86_64" >> dist/ubuntu-x64/README.txt
+        echo "Ubuntu: 20.04" >> dist/ubuntu-x64/README.txt
+        echo "" >> dist/ubuntu-x64/README.txt
+        echo "Usage: ./qconf-x86_64.AppImage" >> dist/ubuntu-x64/README.txt
         
         # Create archive
         cd dist
-        tar -czf qconf-ubuntu-x64.tar.gz ubuntu-x64/
+        tar -czf qconf-ubuntu-x64-appimage.tar.gz ubuntu-x64/
         
-    - name: Upload Ubuntu artifact
+    - name: Upload Ubuntu AppImage artifact
       uses: actions/upload-artifact@v4
       with:
-        name: qconf-ubuntu-x64
-        path: dist/qconf-ubuntu-x64.tar.gz
+        name: qconf-ubuntu-x64-appimage
+        path: dist/qconf-ubuntu-x64-appimage.tar.gz
         retention-days: 30
 
   build-windows:
@@ -110,7 +191,9 @@ jobs:
           mingw-w64-x86_64-make
           mingw-w64-x86_64-qt5-base
           mingw-w64-x86_64-qt5-tools
+          mingw-w64-x86_64-qt5-winextras
           make
+          zip
           
     - name: Build qconf with MSYS2
       shell: msys2 {0}
@@ -120,14 +203,12 @@ jobs:
         qmake -version
         
         # Generate Makefile using Windows .pro file
-        #qmake qconf-windows-static.pro
         qmake qconf-windows-fixed.pro
         
         # Build
         make -j$(nproc)
         
         # Check if binary was created
-        #ls -la qconf-static.exe
         ls -la release/qconf.exe
         
     - name: Test Windows executable
@@ -140,38 +221,83 @@ jobs:
         echo "Binary dependencies:"
         ldd ./release/qconf.exe || echo "Checking dependencies failed"
         
-    - name: Package Windows build
+    - name: Deploy with windeployqt
       shell: msys2 {0}
       run: |
+        # Create deployment directory
         mkdir -p dist/windows-x64
-        cp ./release/qconf.exe dist/windows-x64/qconf.exe
         
-        # Copy any required DLLs
-        # Check what DLLs are needed and copy them
-        echo "Checking for required DLLs..."
+        # Copy the main executable
+        cp ./release/qconf.exe dist/windows-x64/
+        
+        # Use windeployqt to collect all Qt dependencies, plugins, and platform files
+        echo "Running windeployqt to collect dependencies..."
+        windeployqt.exe --dir dist/windows-x64 --release --no-translations --no-system-d3d-compiler --no-opengl-sw dist/windows-x64/qconf.exe
+        
+        # List what was deployed
+        echo "Deployed files:"
+        find dist/windows-x64 -type f | head -20
+        echo "..."
+        echo "Total files: $(find dist/windows-x64 -type f | wc -l)"
+        
+        # Copy additional MSYS2 runtime DLLs that windeployqt might miss
+        echo "Copying additional MSYS2 runtime libraries..."
+        
+        # Get list of DLLs from ldd and copy MSYS2 specific ones
         ldd ./release/qconf.exe | grep mingw64 | awk '{print $3}' | while read dll; do
           if [ -f "$dll" ]; then
-            echo "Copying $dll"
-            cp "$dll" dist/windows-x64/
+            dll_name=$(basename "$dll")
+            if [ ! -f "dist/windows-x64/$dll_name" ]; then
+              echo "Copying additional DLL: $dll_name"
+              cp "$dll" dist/windows-x64/
+            fi
           fi
         done
         
+        # Verify the deployment by checking if essential Qt DLLs are present
+        echo "Checking for essential Qt libraries:"
+        ls -la dist/windows-x64/*.dll | grep -E "(Qt5Core|Qt5Gui|Qt5Widgets)" || echo "Warning: Some Qt DLLs might be missing"
+        
+        # Check for platforms directory
+        if [ -d "dist/windows-x64/platforms" ]; then
+          echo "Platform plugins found:"
+          ls -la dist/windows-x64/platforms/
+        else
+          echo "Warning: No platform plugins directory found"
+        fi
+        
+    - name: Create Windows package
+      shell: msys2 {0}
+      run: |
         # Create info file
-        echo "qconf - Windows x64 Build" > dist/windows-x64/README.txt
+        echo "qconf - Windows x64 Build with Qt Dependencies" > dist/windows-x64/README.txt
         echo "Built on: $(date)" >> dist/windows-x64/README.txt
         echo "Qt Version: 5.x (MSYS2)" >> dist/windows-x64/README.txt
         echo "Architecture: x86_64" >> dist/windows-x64/README.txt
         echo "Built with: MSYS2/MinGW64" >> dist/windows-x64/README.txt
+        echo "Deployment: windeployqt" >> dist/windows-x64/README.txt
+        echo "" >> dist/windows-x64/README.txt
+        echo "This package includes all necessary Qt libraries, plugins, and platform files." >> dist/windows-x64/README.txt
+        echo "Simply extract and run qconf.exe - no additional Qt installation required." >> dist/windows-x64/README.txt
         
-        # Create archive
+        # Create ZIP archive (more Windows-friendly than tar.gz)
         cd dist
-        tar -czf qconf-windows-x64.tar.gz windows-x64/
+        zip -r qconf-windows-x64-complete.zip windows-x64/
         
-    - name: Upload Windows artifact
+        # Also create tar.gz for compatibility
+        tar -czf qconf-windows-x64-complete.tar.gz windows-x64/
+        
+        # Show archive sizes
+        echo "Package sizes:"
+        ls -lh qconf-windows-x64-complete.*
+        
+    - name: Upload Windows complete package
       uses: actions/upload-artifact@v4
       with:
-        name: qconf-windows-x64
-        path: dist/qconf-windows-x64.tar.gz
+        name: qconf-windows-x64-complete
+        path: |
+          dist/qconf-windows-x64-complete.zip
+          dist/qconf-windows-x64-complete.tar.gz
         retention-days: 30
 
   create-release:
@@ -191,11 +317,19 @@ jobs:
         echo "Commit: ${{ github.sha }}" >> RELEASE_NOTES.md
         echo "" >> RELEASE_NOTES.md
         echo "## Included builds:" >> RELEASE_NOTES.md
-        echo "- **Ubuntu x64**: Static build with Qt 5.15.9" >> RELEASE_NOTES.md
-        echo "- **Windows x64**: Build with MSYS2/MinGW64" >> RELEASE_NOTES.md
+        echo "- **Linux x64 AppImage**: Portable AppImage built on Ubuntu 20.04 with Qt 5.15.9 static" >> RELEASE_NOTES.md
+        echo "- **Windows x64 Complete**: Full deployment with windeployqt including all Qt dependencies, plugins, and platform files" >> RELEASE_NOTES.md
         echo "" >> RELEASE_NOTES.md
         echo "## Usage:" >> RELEASE_NOTES.md
-        echo "Extract the appropriate archive for your platform and run the qconf executable." >> RELEASE_NOTES.md
+        echo "### Linux AppImage:" >> RELEASE_NOTES.md
+        echo "1. Extract qconf-ubuntu-x64-appimage.tar.gz" >> RELEASE_NOTES.md
+        echo "2. Make executable: \`chmod +x qconf-x86_64.AppImage\`" >> RELEASE_NOTES.md
+        echo "3. Run: \`./qconf-x86_64.AppImage\`" >> RELEASE_NOTES.md
+        echo "" >> RELEASE_NOTES.md
+        echo "### Windows Complete Package:" >> RELEASE_NOTES.md
+        echo "1. Extract qconf-windows-x64-complete.zip or .tar.gz" >> RELEASE_NOTES.md
+        echo "2. Run qconf.exe directly - no Qt installation required" >> RELEASE_NOTES.md
+        echo "3. All necessary Qt libraries and plugins are included" >> RELEASE_NOTES.md
         
     - name: Create Release
       uses: softprops/action-gh-release@v1
@@ -204,8 +338,9 @@ jobs:
         name: qconf Build ${{ github.run_number }}
         body_path: RELEASE_NOTES.md
         files: |
-          qconf-ubuntu-x64/qconf-ubuntu-x64.tar.gz
-          qconf-windows-x64/qconf-windows-x64.tar.gz
+          qconf-ubuntu-x64-appimage/qconf-ubuntu-x64-appimage.tar.gz
+          qconf-windows-x64-complete/qconf-windows-x64-complete.zip
+          qconf-windows-x64-complete/qconf-windows-x64-complete.tar.gz
         draft: false
         prerelease: false
       env:
