fix: correct qt font path
Error:
  QFontDatabase: Cannot find font directory /tmp/.mount_QConf-qmfLCs/usr/bin/lib/fonts.
Note that Qt no longer ships fonts. Deploy some (from https://dejavu-fonts.github.io/ for example) or switch to fontconfig.

--- a/.github/workflows/build-qconf.yml
+++ b/.github/workflows/build-qconf.yml
@@ -130,7 +130,10 @@ jobs:
         cp qconf-static-bundled AppDir/
         
         # Create fonts directory and copy fonts
-        mkdir -p AppDir/lib/fonts
+        mkdir -p AppDir/usr/bin/lib/fonts
+        cd AppDir
+        ln -s usr/bin/lib/fonts lib/fonts
+        cd ..
         cp dejavu-fonts-ttf-2.37/ttf/DejaVu*.ttf AppDir/lib/fonts/
         
         # Create qt.conf
