fix(CI): path error

--- a/.github/workflows/build-qconf.yml
+++ b/.github/workflows/build-qconf.yml
@@ -131,11 +131,14 @@ jobs:
         
         # Create fonts directory and copy fonts
         mkdir -p AppDir/usr/bin/lib/fonts
-        cd AppDir
-        mkdir lib
-        ln -s usr/bin/lib/fonts lib/fonts
-        cd ..
-        cp dejavu-fonts-ttf-2.37/ttf/DejaVu*.ttf AppDir/lib/fonts/
+        #cd AppDir
+        #mkdir lib
+        #cd lib
+        #ln -s usr/bin/lib/fonts lib/fonts
+        #ln -s usr/bin/lib/fonts fonts
+        #cd ..
+        #cp dejavu-fonts-ttf-2.37/ttf/DejaVu*.ttf AppDir/lib/fonts/
+        cp dejavu-fonts-ttf-2.37/ttf/DejaVu*.ttf AppDir/usr/bin/lib/fonts/
         
         # Create qt.conf
         cat > qt.conf << 'EOF'
